[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11"
console = "0.15"
anyhow = "1.0"
clap = { version = "4.5.57", features = ["derive"] }
regex = "1.10.5"
libc = "0.2"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
headless_chrome = "1.0.21"
scraper = "0.25.0"
itertools = "0.13.0"
